# lib/db/src/schema/users.ts
@@ -1,0 +1,12 @@
+import { pgTable, serial, text, timestamp } from "drizzle-orm/pg-core";
+
+export const usersTable = pgTable("users", {
+  id: serial("id").primaryKey(),
+  full_name: text("full_name").notNull(),
+  email: text("email").notNull().unique(),
+  password_hash: text("password_hash").notNull(),
+  created_at: timestamp("created_at").defaultNow().notNull(),
+});
+
+export type DbUser = typeof usersTable.$inferSelect;
+export type InsertDbUser = typeof usersTable.$inferInsert;
